[workspace]
members = [
    "antelope-common",
    "cosmos-common",
    "ethereum-common",
    "solana-accounts-common",
    "solana-common",
    "stellar-common",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://substreams.streamingfast.io/"
repository = "https://github.com/streamingfast/substreams-foundational-modules"
license = "Apache-2.0"
keywords = ["substreams", "wasm", "streamingfast", "thegraph"]
categories = ["wasm"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
hex = "0.4.3"
num-bigint = "0.4"
prost = "0.13"
prost-types = "0.13"
substreams = "0.6"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
