[package]
name = "antelope-common"
version = "0.4.0"
description = "Foundational Substreams Modules for Antelope Chains"
repository = "https://github.com/streamingfast/substreams-foundational-modules/antelope-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = ">=0.5.18"
substreams-antelope = "0.4"
serde_json = "1.0"
