[package]
name = "antelope-common"
version = "0.5.0"
description = "Foundational Substreams Modules for Antelope Chains"
repository = "https://github.com/streamingfast/substreams-foundational-modules/antelope-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = { workspace = true }
substreams-antelope = "0.6"
serde_json = "1.0"
