[package]
name = "common"
version = "0.1.0"
description = "Common modules for all chains"
repository = "https://github.com/streamingfast/substreams-foundational-modules/ethereum-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
testing = { workspace = true }
