[package]
name = "cosmos_common"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "^0.6.0"
hex = "0.4.3"
prost = "0.13"
prost-types = "0.13"
cosmrs = { version = "0.16.0", features = ["cosmwasm"] }
anyhow = "1.0"
sha2 = "0.10.8"

[dev-dependencies]
base64 = "0.22.1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
