[package]
name = "cosmos-common"
version = "0.0.1"
description = "Foundational Substreams Modules for Cosmos Chains"
repository = "https://github.com/streamingfast/substreams-foundational-modules/cosmos-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
cosmrs = { version = "0.16.0", features = ["cosmwasm"] }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
sha2 = "0.10.8"

[dev-dependencies]
base64 = { workspace = true }

# Required so that cosmrs > cosmos-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
