[package]
name = "ethereum-common"
version = "0.3.0"
description = "Foundational Substreams Modules for Ethereum"
repository = "https://github.com/streamingfast/substreams-foundational-modules/ethereum-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false
crate-type = ["cdylib"]

[[bench]]
name = "filter_calls"
harness = false

[dependencies]
anyhow = { workspace = true }
ethabi = "17"
hex-literal = "0.3"
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-ethereum = "0.10"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
base64 = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
