[package]
name = "solana-accounts-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Solana Accounts"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-foundational-modules/solana-accounts-common-rs"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
five8 = "0.2"
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-solana = "0.14"

[dev-dependencies]
base64 = { workspace = true }
