[package]
name = "solana-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Solana"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-foundational-modules/solana-common"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bs58 = "0.4"
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
# Use latest from https://crates.io/crates/substreams-solana
substreams-solana = "0.13"
substreams-solana-program-instructions = "0.1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
base64 = { workspace = true }
