[package]
name = "solana-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Solana"
repository = "https://github.com/streamingfast/substreams-foundational-modules/solana-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bs58 = "0.4"
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-solana = "0.14"

[dev-dependencies]
testing = { workspace = true }
