[package]
name = "stellar-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Stellar"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-foundational-modules/stellar-common"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4"
num-bigint = "0.4"
prost = "0.13"
prost-types = "0.13"
# Use latest from https://crates.io/crates/substreams
substreams = "0.6"
anyhow = "1.0"
base64 = "0.22.1"
stellar-xdr = { version = "22.1", default-features = true, features = [] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
