[package]
name = "stellar-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Stellar"
repository = "https://github.com/streamingfast/substreams-foundational-modules/stellar-common"
edition.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
bs58 = "0.4"
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
stellar-xdr = { version = "22.1", default-features = true, features = [] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

["dev-dependencies"]
base64 = { workspace = true }
