[package]
name = "stellar-common"
version = "0.1.0"
description = "Substreams showcasing the building blocks of Stellar"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-foundational-modules/stellar-common"
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bigdecimal = "0.4.7"
bs58 = { workspace = true }
num-bigint = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
stellar-xdr = { version = "22.1", default-features = true, features = [] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
